force-app/main/default/objects/Animal__c/fields/Final_Location_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Location_Date__c</fullName>
    <label>Final Location Date</label>
    <type>DateTime</type>
</CustomField>