force-app/main/default/objects/Animal__c/fields/Final_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcome__c</fullName>
    <label>Final Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>