force-app/main/default/objects/Animal__c/fields/Final_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Outcome_Date__c</fullName>
    <label>Final Outcome Date</label>
    <type>Date</type>
</CustomField>