force-app/main/default/objects/Animal__c/fields/First_Abandonment_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Abandonment_Letter_Sent__c</fullName>
    <label>First Abandonment Letter Sent</label>
    <type>Date</type>
</CustomField>