force-app/main/default/objects/Animal__c/fields/First_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Status_Change_Date__c</fullName>
    <label>First Status Change Date</label>
    <type>Date</type>
</CustomField>