force-app/main/default/objects/Animal__c/fields/FM_Age__c.field-meta.xml
<CustomField>
    <fullName>FM_Age__c</fullName>
    <label>FM Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puppy (&lt;5 mos)</fullName>
            </value>
            <value>
                <fullName>Juvenile (5-12 mos)</fullName>
            </value>
            <value>
                <fullName>Adult (1-8 yrs)</fullName>
            </value>
            <value>
                <fullName>Senior (8 yrs+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>