force-app/main/default/objects/Animal__c/fields/FM_Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>FM_Animal_Status__c</fullName>
    <label>FM Animal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Foster</fullName>
            </value>
            <value>
                <fullName>Off Site</fullName>
            </value>
            <value>
                <fullName>Outside Temp Boarding</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Returned to Owner</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>