force-app/main/default/objects/Animal__c/fields/FM_Box_File__c.field-meta.xml
<CustomField>
    <fullName>FM_Box_File__c</fullName>
    <label>FM Box File</label>
    <type>Url</type>
</CustomField>