force-app/main/default/objects/Animal__c/fields/FM_Breed__c.field-meta.xml
<CustomField>
    <fullName>FM_Breed__c</fullName>
    <label>FM Breed</label>
    <type>TextArea</type>
</CustomField>