force-app/main/default/objects/Animal__c/fields/FM_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>FM_Case_Type__c</fullName>
    <label>FM Case Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>