force-app/main/default/objects/Animal__c/fields/FM_Color__c.field-meta.xml
<CustomField>
    <fullName>FM_Color__c</fullName>
    <label>FM Color</label>
    <type>TextArea</type>
</CustomField>