force-app/main/default/objects/Animal__c/fields/FM_Deceased_Reason__c.field-meta.xml
<CustomField>
    <fullName>FM_Deceased_Reason__c</fullName>
    <label>FM Deceased Reason</label>
    <type>TextArea</type>
</CustomField>