force-app/main/default/objects/Animal__c/fields/FM_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>FM_Geo_Location__c</fullName>
    <label>FM Geo Location</label>
    <type>TextArea</type>
</CustomField>