force-app/main/default/objects/Animal__c/fields/FM_ID__c.field-meta.xml
<CustomField>
    <fullName>FM_ID__c</fullName>
    <label>FM ID</label>
    <type>TextArea</type>
</CustomField>