force-app/main/default/objects/Animal__c/fields/FM_Intake_Agency_Dept__c.field-meta.xml
<CustomField>
    <fullName>FM_Intake_Agency_Dept__c</fullName>
    <label>FM Intake Agency / Dept</label>
    <type>TextArea</type>
</CustomField>