force-app/main/default/objects/Animal__c/fields/FM_Legacy_Status__c.field-meta.xml
<CustomField>
    <fullName>FM_Legacy_Status__c</fullName>
    <label>FM Legacy Status</label>
    <type>TextArea</type>
</CustomField>