force-app/main/default/objects/Animal__c/fields/FM_UUID__c.field-meta.xml
<CustomField>
    <fullName>FM_UUID__c</fullName>
    <label>FM UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>