force-app/main/default/objects/Animal__c/fields/Forensic_Behavior_Eval_Grade__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Behavior_Eval_Grade__c</fullName>
    <label>Forensic Behavior Eval Grade</label>
    <length>8</length>
    <type>Text</type>
</CustomField>