force-app/main/default/objects/Animal__c/fields/Forensic_Evaluation_at_Partner__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Evaluation_at_Partner__c</fullName>
    <label>Forensic Evaluation at Partner</label>
    <type>Date</type>
</CustomField>