force-app/main/default/objects/Animal__c/fields/Forensic_Hold_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Hold_Changed_Date__c</fullName>
    <label>Forensic Hold Changed Date</label>
    <type>Date</type>
</CustomField>