force-app/main/default/objects/Animal__c/fields/Forensic_Necropsy_Date__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Necropsy_Date__c</fullName>
    <label>Forensic Necropsy Date</label>
    <type>Date</type>
</CustomField>