force-app/main/default/objects/Animal__c/fields/Forensic_Status__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Status__c</fullName>
    <label>Forensic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forensic Hold</fullName>
            </value>
            <value>
                <fullName>Released from Forensic Hold</fullName>
            </value>
            <value>
                <fullName>Non-Criminal Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>