force-app/main/default/objects/Animal__c/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <label>Formatted Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>