force-app/main/default/objects/Animal__c/fields/Foster_Count__c.field-meta.xml
<CustomField>
    <fullName>Foster_Count__c</fullName>
    <label>Foster Count</label>
    <summaryFilterItems>
        <field>Facility_Outcome__c.Facility_or_Outcome__c</field>
        <operation>equals</operation>
        <value>Foster Home</value>
    </summaryFilterItems>
    <summaryForeignKey>Facility_Outcome__c.Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>