force-app/main/default/objects/Animal__c/fields/Foster_Duration__c.field-meta.xml
<CustomField>
    <fullName>Foster_Duration__c</fullName>
    <label>Foster Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>