force-app/main/default/objects/Animal__c/fields/Foster_Length__c.field-meta.xml
<CustomField>
    <fullName>Foster_Length__c</fullName>
    <label>Foster Length</label>
    <summarizedField>Facility_Outcome__c.Location_Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Facility_Outcome__c.Facility_Outcome__c</field>
        <operation>equals</operation>
        <value>Foster Home</value>
    </summaryFilterItems>
    <summaryForeignKey>Facility_Outcome__c.Animal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>