force-app/main/default/objects/Animal__c/fields/Foster_Name__c.field-meta.xml
<CustomField>
    <fullName>Foster_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foster Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animals (Foster Name)</relationshipLabel>
    <relationshipName>Animals3</relationshipName>
    <type>Lookup</type>
</CustomField>