force-app/main/default/objects/Animal__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Animal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sex</valueSetName>
    </valueSet>
</CustomField>