force-app/main/default/objects/Animal__c/fields/Grade_Change__c.field-meta.xml
<CustomField>
    <fullName>Grade_Change__c</fullName>
    <label>Grade Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>