force-app/main/default/objects/Animal__c/fields/Grade_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Grade_Change_Reason__c</fullName>
    <description>This is required field when Current Behavior Grade field is changed on the animal record.</description>
    <label>Grade Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>