force-app/main/default/objects/Animal__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <label>Handler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red (designated)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>