force-app/main/default/objects/Animal__c/fields/Helper_Dogs__c.field-meta.xml
<CustomField>
    <fullName>Helper_Dogs__c</fullName>
    <inlineHelpText>The dogs favorite helper dogs</inlineHelpText>
    <label>Helper Dogs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>