force-app/main/default/objects/Animal__c/fields/Hold_Status_ARC_CARE__c.field-meta.xml
<CustomField>
    <fullName>Hold_Status_ARC_CARE__c</fullName>
    <label>Hold Status ARC/CARE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTA</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Forensic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>