force-app/main/default/objects/Animal__c/fields/Ideal_Weight__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Weight__c</fullName>
    <label>Ideal Weight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>