force-app/main/default/objects/Animal__c/fields/Important_Notes_ARC_CARE__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes_ARC_CARE__c</fullName>
    <label>Important Notes ARC/CARE</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>