force-app/main/default/objects/Animal__c/fields/Impromed_Additional_ID_s__c.field-meta.xml
<CustomField>
    <fullName>Impromed_Additional_ID_s__c</fullName>
    <label>Impromed / Additional ID #s</label>
    <length>50</length>
    <type>Text</type>
</CustomField>