force-app/main/default/objects/Animal__c/fields/Impromed_ID__c.field-meta.xml
<CustomField>
    <fullName>Impromed_ID__c</fullName>
    <label>Impromed ID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>