force-app/main/default/objects/Animal__c/fields/In_Kennel_Socialization__c.field-meta.xml
<CustomField>
    <fullName>In_Kennel_Socialization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Kennel - Socialization</label>
    <type>Checkbox</type>
</CustomField>