force-app/main/default/objects/Animal__c/fields/Individual_Cremation__c.field-meta.xml
<CustomField>
    <fullName>Individual_Cremation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Cremation</label>
    <type>Checkbox</type>
</CustomField>