force-app/main/default/objects/Animal__c/fields/Initial_Altered_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Altered_Status__c</fullName>
    <label>Initial Altered Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sex</valueSetName>
    </valueSet>
</CustomField>