force-app/main/default/objects/Animal__c/fields/Initial_Animal__c.field-meta.xml
<CustomField>
    <fullName>Initial_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Original Animal Record</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>