force-app/main/default/objects/Animal__c/fields/Initial_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Initial_Outcome__c</fullName>
    <label>Initial Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>