force-app/main/default/objects/Animal__c/fields/Initial_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Outcome_Date__c</fullName>
    <label>Initial Outcome Date</label>
    <type>Date</type>
</CustomField>