force-app/main/default/objects/Animal__c/fields/Initial_Weight_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Weight_Date__c</fullName>
    <label>Initial Weight Date</label>
    <type>Date</type>
</CustomField>