force-app/main/default/objects/Animal__c/fields/Initial_Weight_in_lbs__c.field-meta.xml
<CustomField>
    <fullName>Initial_Weight_in_lbs__c</fullName>
    <label>Initial Weight (in lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>