force-app/main/default/objects/Animal__c/fields/Injury_Type__c.field-meta.xml
<CustomField>
    <fullName>Injury_Type__c</fullName>
    <label>Injury Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Overt</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>