force-app/main/default/objects/Animal__c/fields/Intake_Agency_Dept__c.field-meta.xml
<CustomField>
    <fullName>Intake_Agency_Dept__c</fullName>
    <label>Intake Agency/Dept</label>
    <length>50</length>
    <type>Text</type>
</CustomField>