force-app/main/default/objects/Animal__c/fields/Intake_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Intake_Animal_Name__c</fullName>
    <label>Intake Animal Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>