force-app/main/default/objects/Animal__c/fields/Intake_Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Animal_Status__c</fullName>
    <label>Intake Animal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Status</valueSetName>
    </valueSet>
</CustomField>