force-app/main/default/objects/Animal__c/fields/Intake_BCS__c.field-meta.xml
<CustomField>
    <fullName>Intake_BCS__c</fullName>
    <label>Current BCS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>