force-app/main/default/objects/Animal__c/fields/Intake_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Intake_Date_Time__c</fullName>
    <label>Intake Date/Time</label>
    <type>DateTime</type>
</CustomField>