force-app/main/default/objects/Animal__c/fields/Intake_Type__c.field-meta.xml
<CustomField>
    <fullName>Intake_Type__c</fullName>
    <label>Intake Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASPCA HLE</fullName>
            </value>
            <value>
                <fullName>Born on Site</fullName>
            </value>
            <value>
                <fullName>Found</fullName>
            </value>
            <value>
                <fullName>Owner Requested</fullName>
            </value>
            <value>
                <fullName>Remote Intake</fullName>
            </value>
            <value>
                <fullName>Rescued by ASPCA</fullName>
            </value>
            <value>
                <fullName>Seized</fullName>
                <default>true</default>
                <label>Seized</label>
            </value>
            <value>
                <fullName>Shelter Transfer</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Vet/Boarding Clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>