force-app/main/default/objects/Animal__c/fields/Intake_Weight__c.field-meta.xml
<CustomField>
    <fullName>Intake_Weight__c</fullName>
    <label>Current Weight in lbs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>