force-app/main/default/objects/Animal__c/fields/Last_Enrichment_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Enrichment_Session__c</fullName>
    <label>Last Enrichment Session</label>
    <summarizedField>Daily_Enrichment__c.DE_Date__c</summarizedField>
    <summaryForeignKey>Daily_Enrichment__c.Animal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>