force-app/main/default/objects/Animal__c/fields/Last_Out_of_Kennel_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Out_of_Kennel_Activity__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(Last_Enrichment_Session__c),
        ISBLANK(Last_Playgroup_Session__c),
        ISBLANK(Last_Treatment_Session__c)
    ),
    NULL,
    DATE(1900, 01, 01) +
    MAX(
        BLANKVALUE(
            Last_Enrichment_Session__c, 
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            Last_Playgroup_Session__c,
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01),
        BLANKVALUE(
            Last_Treatment_Session__c,
            DATE(1900, 01, 01)
        ) - DATE(1900, 01, 01)
    )
)</formula>
    <label>Last Out of Kennel Activity</label>
    <type>Date</type>
</CustomField>