force-app/main/default/objects/Animal__c/fields/Last_Playgroup_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Playgroup_Assignment__c</fullName>
    <label>Last Playgroup Assignment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>