force-app/main/default/objects/Animal__c/fields/Last_Playgroup_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Playgroup_Session__c</fullName>
    <description>Get the last date each animal has received a Playgroup Session</description>
    <label>Last Playgroup Session</label>
    <summarizedField>Animal_Playgroup__c.Last_Playgroup_Session__c</summarizedField>
    <summaryForeignKey>Animal_Playgroup__c.Animal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>