force-app/main/default/objects/Animal__c/fields/Last_Treatment_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Treatment_Session__c</fullName>
    <formula>Treatment_Plan__r.Last_Treatment_Session__c</formula>
    <label>Last Treatment Session</label>
    <type>Date</type>
</CustomField>