force-app/main/default/objects/Animal__c/fields/Legacy_FM_Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_FM_Animal_ID__c</fullName>
    <label>Legacy FM Animal ID #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>