force-app/main/default/objects/Animal__c/fields/Legal_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Legal_Permissions__c</fullName>
    <label>Legal Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent to treat</fullName>
            </value>
            <value>
                <fullName>Consent to necropsy</fullName>
            </value>
            <value>
                <fullName>No consent</fullName>
            </value>
            <value>
                <fullName>Verbal consent only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>