force-app/main/default/objects/Animal__c/fields/Legal_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Status_Changed_Date__c</fullName>
    <label>Legal Status Changed Date</label>
    <type>Date</type>
</CustomField>