force-app/main/default/objects/Animal__c/fields/Live_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Live_Deceased__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Final_Animal_Status__c, &quot;Deceased (Died in Care)&quot;),
ISPICKVAL(Final_Animal_Status__c, &quot;Deceased (DOA)&quot;),
ISPICKVAL(Final_Animal_Status__c, &quot;Deceased (Euthanized)&quot;)
), &quot;Deceased&quot;, &quot;Live&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live/Deceased</label>
    <type>Text</type>
</CustomField>