force-app/main/default/objects/Animal__c/fields/Live_or_Dead__c.field-meta.xml
<CustomField>
    <fullName>Live_or_Dead__c</fullName>
    <label>Live or Dead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>DOA</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>