force-app/main/default/objects/Animal__c/fields/Location_Filter__c.field-meta.xml
<CustomField>
    <fullName>Location_Filter__c</fullName>
    <formula>IF(User_Location__c = &quot;All&quot;, True, IF(ISBLANK(Current_Recent_Shelter_Location__c), False, IF(CONTAINS(User_Location__c, Current_Recent_Shelter_Location__c), True, False)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Filter</label>
    <type>Checkbox</type>
</CustomField>