force-app/main/default/objects/Animal__c/fields/Location_History__c.field-meta.xml
<CustomField>
    <fullName>Location_History__c</fullName>
    <label>Location History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>