force-app/main/default/objects/Animal__c/fields/Lost_Weight__c.field-meta.xml
<CustomField>
    <fullName>Lost_Weight__c</fullName>
    <formula>OR(
Current_Weight_in_kgs_Num__c &lt; Previous_Weight_in_kgs__c,
Current_Weight_in_kgs_Num__c &lt; Initial_Weight_in_kgs__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Weight?</label>
    <type>Checkbox</type>
</CustomField>