force-app/main/default/objects/Animal__c/fields/Markings__c.field-meta.xml
<CustomField>
    <fullName>Markings__c</fullName>
    <label>Markings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type_of_Animal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Markings</valueSetName>
    </valueSet>
</CustomField>