force-app/main/default/objects/Animal__c/fields/Medical_Flag__c.field-meta.xml
<CustomField>
    <fullName>Medical_Flag__c</fullName>
    <label>Medical Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vaccine Reaction</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>No Jugular Blood Draw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>