force-app/main/default/objects/Animal__c/fields/Medical_Grade__c.field-meta.xml
<CustomField>
    <fullName>Medical_Grade__c</fullName>
    <label>Medical Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C-</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>