force-app/main/default/objects/Animal__c/fields/Medical_Hold_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Hold_Release_Date__c</fullName>
    <label>Medical Hold Release Date</label>
    <type>Date</type>
</CustomField>