force-app/main/default/objects/Animal__c/fields/Medical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Notes__c</fullName>
    <label>Medical Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>