force-app/main/default/objects/Animal__c/fields/Meets_Adoptability_Date__c.field-meta.xml
<CustomField>
    <fullName>Meets_Adoptability_Date__c</fullName>
    <label>Meets Adoptability Date</label>
    <type>Date</type>
</CustomField>