force-app/main/default/objects/Animal__c/fields/Microchip_Administered__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Administered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box ONLY if the ASPCA administered a microchip.</inlineHelpText>
    <label>Microchip Administered</label>
    <type>Checkbox</type>
</CustomField>