force-app/main/default/objects/Animal__c/fields/Microchip_Notes__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Notes__c</fullName>
    <label>Microchip Notes</label>
    <type>TextArea</type>
</CustomField>