force-app/main/default/objects/Animal__c/fields/Microchip_Results__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Results__c</fullName>
    <description>If scanned, Positive or Negative?</description>
    <inlineHelpText>If scanned, Positive or Negative?</inlineHelpText>
    <label>Microchip Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>