force-app/main/default/objects/Animal__c/fields/Most_Recent_Exam_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Exam_Sheet__c</fullName>
    <label>Most Recent Exam Sheet</label>
    <summarizedField>Animal_Exam_Sheet__c.CreatedDate</summarizedField>
    <summaryForeignKey>Animal_Exam_Sheet__c.Animal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>