force-app/main/default/objects/Animal__c/fields/Most_Recent_Foster_Note__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Foster_Note__c</fullName>
    <label>Most Recent Foster Note</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>