force-app/main/default/objects/Animal__c/fields/Most_Recent_Foster_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Foster_Note_Date__c</fullName>
    <label>Most Recent Foster Note Date</label>
    <type>Date</type>
</CustomField>