force-app/main/default/objects/Animal__c/fields/Move_Reason__c.field-meta.xml
<CustomField>
    <fullName>Move_Reason__c</fullName>
    <label>Move Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>