force-app/main/default/objects/Animal__c/fields/MRC_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>MRC_Decline_Reason__c</fullName>
    <label>MRC Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog Aggressive</fullName>
            </value>
            <value>
                <fullName>Offensively Aggressive to Human</fullName>
            </value>
            <value>
                <fullName>No Space</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>